# Gate-Control-App

./: .env.example  README.md  docker-compose.yml
Ai-Agent-Service/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
Ai-Agent-Service/app/: config.py  main.py  models.py  tools.py
Ai-Agent-Service/app/agents/: base.py  gemini_agent.py  llama_agent.py
Ai-Agent-Service/app/prompts/: system_prompt.txt
Ai-Agent-Service/test/: integration_test.py  small_test.py
Ai-Agent-Service/test/mock/: mock_api.py
Backend/: README.md
Backend/apcs-backend/: Dockerfile  docker-compose.yml
Backend/apcs-backend/config/: scramble.php
Backend/apcs-backend/routes/: api.php
Frontend/: .env.example  .gitignore  API_REFERENCE.md  AUTHENTICATION.md  Dockerfile  QUICKSTART.md  README.md  docker-start.bat  docker-start.sh  index.html  package-lock.json  package.json
Frontend/src/: App.jsx  index.css
Frontend/src/components/: AIFloatingWidget.jsx  APIIntegration.jsx  Header.jsx  ProtectedRoute.jsx  Sidebar.jsx
Frontend/src/config/: api.config.js
Frontend/src/context/: AuthContext.jsx  BookingContext.jsx  ProfileContext.jsx
Frontend/src/examples/: ApiUsageExamples.jsx
Frontend/src/hooks/: useApi.js
Frontend/src/layouts/: MainLayout.jsx
Frontend/src/pages/: AIAssistant.jsx  Bookings.jsx  CreateBooking.jsx  Dashboard.jsx  DashboardRouter.jsx  FleetManagement.jsx  Login.jsx  Logs.jsx  Notifications.jsx  Operations.jsx  Profile.jsx  ReschedulePage.jsx  Settings.jsx  SlotManagement.jsx  Users.jsx
(+55 files in other folders)
